real-test/defects/scala-java_defect_enhanced_sc_java_1776502520871_0_1776502521518.txt
Language Pair: scala-java
Test Case ID: enhanced_sc_java_1776502520871_0
Defect Detected: true
Success: false
Message: Scala-Java compilation failed: PatternMatch.scala:3: error: object Person is not a case class, nor does it have an unapply/unapplySeq member
    case Person(name, age) if age >= 18 => s"$name is an adult"
         ^
PatternMatch.scala:4: error: object Person is not a case class, nor does it have an unapply/unapplySeq member
    case Person(name, _) => s"$name is a minor"
         ^
two errors found

=== SOURCE CODE ===

=== Person.java ===
public class Person {
    public final String name;
    public final int age;
    public Person(String name, int age) { this.name = name; this.age = age; }
}


=== PatternMatch.scala ===
object PatternMatch {
  def processPerson(p: Person): String = p match {
    case Person(name, age) if age >= 18 => s"$name is an adult"
    case Person(name, _) => s"$name is a minor"
  }
}

object Main extends App {
  val person = new Person("Alice", 25)
  println(PatternMatch.processPerson(person))
}


